Fix the wrong paht of image

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="e-content article-entry" itemprop="articleBody">
       
         <!--# 秋天的野果 -->
-<p><img src="../../images/%E7%A7%8B%E5%A4%A9%E9%87%8E%E6%9E%9C/0title_banner.png" alt="秋天野果"></p>
+<p><img src="/images/%E7%A7%8B%E5%A4%A9%E9%87%8E%E6%9E%9C/0title_banner.png" alt="秋天野果"></p>
 <p>在那个小山村里，小时候没有零食，也没有零食这个概念。以前村里与城市没有多少联系，村里小孩能最方便获得的‘零食’就是山里野的野果子，这也可能导致后来大量外来零食流入时，像’干脆面’, ‘辣条’，我们都统称叫这些零食叫’果子’，可能是因为它们像山里的野果一样，是一种零食，区别是一个是从山里摘，一个是用钱买。</p>
         
           <p class="article-more-link">
